--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "next": "12.3.0",
     "react": "18.2.0",
